--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ input {
     background: none;
     border: 2px solid #4caf50;
     color: white;
+    outline: none;
     padding: 5px;
     font-size: 18px;
     cursor: pointer;
