--- a/styles.css
+++ b/styles.css
@@ -4,8 +4,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background:url(starry-sky-998641.jpg);
-    background-size: cover;
+    background-color: #000405;
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
 
 input {
