--- a/styles.css
+++ b/styles.css
@@ -1,71 +1,111 @@
 @import "https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #000405;
-    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+  margin: 0;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: #000405;
+  background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
 }
 
 input {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.container {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.heading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
 .login-box {
-    width: 280px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
+  width: 280px;
+  padding: 1rem 2rem;
+  color: white;
+  border: 2px solid white;
+  border-radius: 10px;
 }
 
 .login {
-    float: left;
-    font-size: 40px;
-    border-bottom: 6px solid #4caf50;
-    margin-bottom: 50px;
-    padding: 13px 0;
+  float: left;
+  font-size: 40px;
+  border-bottom: 6px solid #4caf50;
+  margin-bottom: 50px;
+  padding: 13px 0;
 }
 
 .textbox {
-    width: 100%;
-    overflow: hidden;
-    font-size: 20px;
-    padding: 8px 0;
-    margin: 8px 0;
-    border-bottom: 1px solid #4caf50;
+  width: 100%;
+  overflow: hidden;
+  font-size: 20px;
+  padding: 8px 0;
+  margin: 8px 0;
+  border-bottom: 1px solid #4caf50;
+  margin-bottom: 2rem;
 }
 
 .textbox i {
-    width: 26px;
-    float: left;
-    text-align: center;
+  width: 26px;
+  float: left;
+  text-align: center;
 }
 
 .textbox input {
-    border: none;
-    outline: none;
-    background: none;
-    color: white;
-    font-size: 18px;
-    width: 80%;
-    float: left;
-    margin: 0 10px;
+  border: none;
+  outline: none;
+  background: none;
+  color: white;
+  font-size: 18px;
+  width: 80%;
+  float: left;
+  margin: 0 10px;
 }
 
 .btn {
-    width: 100%;
-    background: none;
-    border: 2px solid #4caf50;
-    color: white;
-    outline: none;
-    padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 12px 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  width: 100%;
+  background: none;
+  border: 2px solid #4caf50;
+  border-radius: 10px;
+  color: white;
+  outline: none;
+  padding: 0.7rem;
+  font-size: 18px;
+  cursor: pointer;
+  margin: 12px 0;
+  transition: all 0.2s;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
+.btn:hover {
+  background-color: #4caf50;
+  color: white;
+}
 
+.error {
+  color: red;
+  margin-bottom: 1rem;
+}
+
+.checkbox {
+  color: white;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.checkbox input {
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+}
