--- a/styles.css
+++ b/styles.css
@@ -29,10 +29,10 @@ input {
 }
 
 .login-box {
-  width: 280px;
+  width: 20rem;
   padding: 1rem 2rem;
   color: white;
-  border: 2px solid white;
+  border: 2px solid #f3f3f3;
   border-radius: 10px;
 }
 
